--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "concurrently -k -n css,server \"npm:css:watch\" \"nodemon index.js\"",
+    "build": "npm run css:build",
+    "css:build": "npx tailwindcss -c tailwind.config.js -i ./src/styles/input.css -o ./public/styles.css --minify",
+    "css:watch": "npx tailwindcss -c tailwind.config.js -i ./src/styles/input.css -o ./public/styles.css --watch",
     "prestart": "prisma migrate deploy",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && npm run css:build",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
@@ -26,7 +29,12 @@
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "nodemon": "^3.1.7",
-    "prisma": "^5.20.0"
+    "postcss": "^8.4.47",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^3.4.18"
   }
 }
