--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "bcrypt": "^5.1.1",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
@@ -35,6 +37,6 @@
     "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
     "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^4.0.0"
   }
 }
